# MuduoChat

./: CMakeLists.txt  build.sh  cleanbuild.sh
include/: public.h
include/server/: chatserver.h  chatservice.h  db.h  dbutils.h  friendmodel.h  offlinemessagemodel.h  user.h  usermodel.h
src/: chatserver.cc  chatservice.cc  db.cc  dbutils.cc  friendmodel.cc  main.cc  offlinemessagemodel.cc  offlinemessagemodel.cpp  usermodel.cc
